# gnome-ging

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.in  de-fr.ding  de-it.ding  de-nl.ding  de-pt.ding  en-ar.ding  en-de.ding  en-es.ding  en-fr.ding  en-it.ding  en-lat.ding  en-no.ding  en-pt.ding  en-sv.ding  es-de.ding  fr-de.ding  gnome-ding.desktop  gnome-ding.glade  gnome-ding.gladep  gnome-ding.spec  gnome-ding.spec.in  it-de.ding  it-en.ding  lat-de.ding  lat-en.ding  no-en.ding  thesaurus-de.ding  thesaurus-es.ding  (+2 more)
debian/: Makefile.am  Makefile.in  README.Debian  changelog  control  control.in  copyright  copyright.in  gnome-ding-dict.install  gnome-ding.install  gnome-ding.postinst  gnome-ding.postrm  menu  postinst  postrm  preinst  prerm  rules  shlibdeps.sh
doc/: Makefile.am  Makefile.in
doc/C/: Makefile.am  Makefile.in  gnome-ding-C.omf  gnome-ding.xml
doc/de/: Makefile.am  Makefile.in  gnome-ding-de.omf  gnome-ding.xml
doc/es/: Makefile.am  Makefile.in  gnome-ding-es.omf  gnome-ding.xml
doc/fr/: Makefile.am  Makefile.in  gnome-ding-fr.omf  gnome-ding.xml
po/: ChangeLog  POTFILES.in  br.gmo  br.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  main.h  myaspell.c  myaspell.h  thesaurus.c  thesaurus.h
