dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gnome-ding, 2.0)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="libgnomeui-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=gnome_ding
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS="de es fr"
AM_GLIB_GNU_GETTEXT

dnl ##########################################################################
dnl Check for aspell if available
dnl ##########################################################################

AC_ARG_ENABLE(aspell, [  --enable-aspell        Use aspell v0.50 for spelling [default=yes]],[
        use_aspell=$enableval
],[
        use_aspell=yes
])
 
if test x"$use_aspell" = xyes; then
        AC_DEFINE(USE_ASPELL, 1, [Defined when aspell-api is to use.])
	LIBS="$LIBS -laspell"
fi
                                                                                                          

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
doc/Makefile
doc/C/Makefile
doc/de/Makefile
])

