dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
VERSION="2.2"
AM_INIT_AUTOMAKE(gnome-ding, $VERSION)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST
AC_FUNC_STAT
AC_HEADER_STDBOOL
AC_HEADER_TIME
AC_PROG_CXX

pkg_modules="libgnomeui-2.0 gtk+-2.0 gconf-2.0 atk pango"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
AC_SUBST(VERSION) 

AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strstr])

GETTEXT_PACKAGE=gnome_ding
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS="de es fr br it"
AM_GLIB_GNU_GETTEXT

dnl ##########################################################################
dnl Check for aspell if available
dnl ##########################################################################

AC_ARG_ENABLE(aspell, [  --enable-aspell        Use aspell (>0.50) for spelling [default=yes]],[
        use_aspell=$enableval
],[
        use_aspell=yes
])
 
if test x"$use_aspell" = xyes; then
        AC_DEFINE(USE_ASPELL, 1, [Defined when aspell-api is to use.])
	LIBS="$LIBS -laspell"
fi

AC_ARG_ENABLE(debug, [  --enable-debug        Use debug mode [default=no]],[
        use_debug=$enableval
],[
        use_debug=yes
])                                                                                                          



AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
doc/Makefile
doc/C/Makefile
doc/de/Makefile
gnome-ding.spec
debian/control
debian/Makefile
debian/copyright
])

